src/objects/Building_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Building_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Time_hours__c</fullName>
        <inlineHelpText>Set hours</inlineHelpText>
        <label>Arrival Time hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Delivery__c</fullName>
        <label>Content Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Delivery Date</description>
        <inlineHelpText>Delivery Date</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Of_Activity__c</fullName>
        <label>Description Of Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Of_Delivery__c</fullName>
        <label>Description Of Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Help Text Gate</inlineHelpText>
        <label>Gate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Gate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Building_Tickets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hub_Building_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Help Text Hub/Building Site</inlineHelpText>
        <label>Hub/Building Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hub_Building_Site__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Building Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hub_Building_Site__c</referenceTo>
        <relationshipName>Building_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loading_And_Unloading_Time__c</fullName>
        <inlineHelpText>Voer hier de tijd in die het kost om de lading te lossen in minuten</inlineHelpText>
        <label>Loading And Unloading Time (in minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loading_Unloading_Time_hours__c</fullName>
        <description>Set hours</description>
        <inlineHelpText>Set hours</inlineHelpText>
        <label>Loading_Unloading_Time_hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Site Location</value>
            </filterItems>
            <filterItems>
                <field>$Source.Hub_Building_Site__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Hub_Building_Site__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Building_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projecten__c</referenceTo>
        <relationshipName>Building_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projectmember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projectmember</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Projectmember__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Projectmember__c</referenceTo>
        <relationshipName>Building_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reden__c</fullName>
        <label>Reden</label>
        <picklist>
            <controllingField>Volgens_schema_aangekomen__c</controllingField>
            <picklistValues>
                <fullName>Te laat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niet gekomen</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Building_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transporteur__c</fullName>
        <label>Transporteur</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Transport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Kies hier het verticale transport wat er nodig is om de levering te kunnen afleveren.</inlineHelpText>
        <label>Vertical Transport</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vertical Transport</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Building_Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volgens_schema_aangekomen__c</fullName>
        <label>Volgens schema aangekomen</label>
        <picklist>
            <picklistValues>
                <fullName>Ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bouwticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Number__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Arrival_Time__c</columns>
        <columns>Requestor__c</columns>
        <columns>Gate__c</columns>
        <columns>Hub_Building_Site__c</columns>
        <columns>Content_Delivery__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>Ingediende_tickets</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Arrival_Time__c</columns>
        <columns>Description_Of_Delivery__c</columns>
        <columns>Gate__c</columns>
        <columns>Loading_And_Unloading_Time__c</columns>
        <columns>Vertical_Transport__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Ingediende tickets</label>
    </listViews>
    <listViews>
        <fullName>Kraan_planning</fullName>
        <columns>NAME</columns>
        <columns>Vertical_Transport__c</columns>
        <columns>Requestor__c</columns>
        <columns>Arrival_Time__c</columns>
        <columns>Loading_Unloading_Time_hours__c</columns>
        <columns>Loading_And_Unloading_Time__c</columns>
        <columns>Description_Of_Activity__c</columns>
        <columns>End_Point__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical_Transport__c</field>
            <operation>equals</operation>
            <value>kraan 1</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>WTC Utrecht</value>
        </filters>
        <label>Planning Kraan 1 WTC</label>
    </listViews>
    <listViews>
        <fullName>Nog_goed_te_keuren_tickets</fullName>
        <columns>Number__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Arrival_Time__c</columns>
        <columns>Requestor__c</columns>
        <columns>Description_Of_Activity__c</columns>
        <columns>Description_Of_Delivery__c</columns>
        <columns>End_Point__c</columns>
        <columns>Gate__c</columns>
        <columns>Loading_Unloading_Time_hours__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Vertical_Transport__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Nog goed te keuren tickets</label>
    </listViews>
    <listViews>
        <fullName>Weeklijst</fullName>
        <columns>NAME</columns>
        <columns>Arrival_Time__c</columns>
        <columns>Arrival_Time_hours__c</columns>
        <columns>Description_Of_Activity__c</columns>
        <columns>Description_Of_Delivery__c</columns>
        <columns>Hub_Building_Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>Weeklijst</label>
    </listViews>
    <nameField>
        <displayFormat>BT-{00000}</displayFormat>
        <label>Naam van Building Ticket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bouwticket</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>